--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
+    "antd": "^5.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "tslib": "^2.6.2",
     "tsparticles": "^3.2.2"
   },
